--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,26 @@ body::-webkit-scrollbar-thumb
 .nextui-backdrop-wrapper-enter.nextui-backdrop-wrapper-enter-active {
 	z-index: 200;
 }
-
+.badge {
+	width: 40px;
+	height: 40px;
+	border-radius: 20%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: all 0.2s ease;
+	box-shadow: 2px 5px 4px 2px rgba(0, 0, 0, 0.001);
+  }
+  
+  .rounded2 {
+	width: 40px;
+	height: 40px;
+	background: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+  }
 
 @tailwind base;
 @tailwind components;
